deployments-go.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-go
  labels:
    app.kubernetes.io/instance: a
    app.kubernetes.io/name: recursivecall
    app.kubernetes.io/version: go
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: a
      app.kubernetes.io/name: recursivecall
      app.kubernetes.io/version: go
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: a
        app.kubernetes.io/name: recursivecall
        app.kubernetes.io/version: go
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: env-config
        image: davidbetz/recursivecall-go
        name: a
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-go
  labels:
    app.kubernetes.io/instance: b
    app.kubernetes.io/name: recursivecall
    app.kubernetes.io/version: go
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: b
      app.kubernetes.io/name: recursivecall
      app.kubernetes.io/version: go
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: b
        app.kubernetes.io/name: recursivecall
        app.kubernetes.io/version: go
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: env-config
        image: davidbetz/recursivecall-go
        readinessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - a
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - a
          failureThreshold: 3
          periodSeconds: 2
          timeoutSeconds: 4
        name: b
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c-go
  labels:
    app.kubernetes.io/instance: c
    app.kubernetes.io/name: recursivecall
    app.kubernetes.io/version: go
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: c
      app.kubernetes.io/name: recursivecall
      app.kubernetes.io/version: go
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: c
        app.kubernetes.io/name: recursivecall
        app.kubernetes.io/version: go
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: env-config
        image: davidbetz/recursivecall-go
        readinessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - b
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - b
          failureThreshold: 3
          periodSeconds: 2
          timeoutSeconds: 4
        name: c
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d-go
  labels:
    app.kubernetes.io/instance: d
    app.kubernetes.io/name: recursivecall
    app.kubernetes.io/version: go
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: d
      app.kubernetes.io/name: recursivecall
      app.kubernetes.io/version: go
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: d
        app.kubernetes.io/name: recursivecall
        app.kubernetes.io/version: go
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: env-config
        image: davidbetz/recursivecall-go
        readinessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - c
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - c
          failureThreshold: 3
          periodSeconds: 2
          timeoutSeconds: 4
        name: d
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-go
  labels:
    app.kubernetes.io/instance: e
    app.kubernetes.io/name: recursivecall
    app.kubernetes.io/version: go
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: e
      app.kubernetes.io/name: recursivecall
      app.kubernetes.io/version: go
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: e
        app.kubernetes.io/name: recursivecall
        app.kubernetes.io/version: go
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: env-config
        image: davidbetz/recursivecall-go
        readinessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - d
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - d
          failureThreshold: 3
          periodSeconds: 2
          timeoutSeconds: 4
        name: e
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f-go
  labels:
    app.kubernetes.io/instance: f
    app.kubernetes.io/name: recursivecall
    app.kubernetes.io/version: go
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: f
      app.kubernetes.io/name: recursivecall
      app.kubernetes.io/version: go
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: f
        app.kubernetes.io/name: recursivecall
        app.kubernetes.io/version: go
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: env-config
        image: davidbetz/recursivecall-go
        readinessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - e
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - e
          failureThreshold: 3
          periodSeconds: 2
          timeoutSeconds: 4
        name: f
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: g-go
  labels:
    app.kubernetes.io/instance: g
    app.kubernetes.io/name: recursivecall
    app.kubernetes.io/version: go
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: g
      app.kubernetes.io/name: recursivecall
      app.kubernetes.io/version: go
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: g
        app.kubernetes.io/name: recursivecall
        app.kubernetes.io/version: go
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: env-config
        image: davidbetz/recursivecall-go
        readinessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - f
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - ./recursivecall
            - check
            - f
          failureThreshold: 3
          periodSeconds: 2
          timeoutSeconds: 4
        name: g
      restartPolicy: Always
