network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: network-policy-port-3000
 namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: recursivecall
  ingress:
    - ports:
      - port: 3000
